# perling-vm

./: .tokeignore  Cargo.toml  README.md
.github/workflows/: main.yml  nightly.yml
docs/: ADD.md  DIV.md  LOAD.md  SUB.md
src/: cli.yaml  debug.rs  instructions.rs  label.rs  main.rs  register.rs  stack.rs  vm.rs
