[package]
name = "perling_vm"
version = "0.1.0"
authors = ["Tarith <tarithj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
log = "0.4.14"
simplelog = "0.9.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
home = "0.5.3"